--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -794,7 +794,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
