--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="index.html">Shop</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html">Inventory</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html">Link-Up</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html">Fresh Styles</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html">About Us</a></li>
 							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Shop</a>
@@ -114,18 +117,17 @@
 						<div class="row single-slide align-items-center d-flex">
 							<div class="col-lg-5 col-md-6">
 								<div class="banner-content">
-									<h1>Nike New <br>Collection!</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-										dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<h1>CurrencyCops's Featured Shoe <br>Collection!</h1>
+									<p>Yeezy Boost 350 V2 "blue" is featured shoe this week from CurrencyCops.</p>
 									<div class="add-bag d-flex align-items-center">
 										<a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-										<span class="add-text text-uppercase">Add to Bag</span>
+										<span class="add-text text-uppercase">Add to CC Bag!</span>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-7">
 								<div class="banner-img">
-									<img class="img-fluid" src="img/banner/banner-img.png" alt="">
+									<img class="img-fluid" src="img/banner/banner-img.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -133,7 +135,7 @@
 						<div class="row single-slide">
 							<div class="col-lg-5">
 								<div class="banner-content">
-									<h1>Nike New <br>Collection!</h1>
+									<h1> <br></h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
 										dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
 									<div class="add-bag d-flex align-items-center">
@@ -144,7 +146,7 @@
 							</div>
 							<div class="col-lg-7">
 								<div class="banner-img">
-									<img class="img-fluid" src="img/banner/banner-img.png" alt="">
+									<img class="img-fluid" src="img/banner/banner-img.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -280,10 +282,8 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-6 text-center">
 						<div class="section-title">
-							<h1>Latest Products</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore
-								magna aliqua.</p>
+							<h1>Latest Cops</h1>
+							<p>Below is a sneak peak of our latest shoes. Visit the "Inventory Page" in order to see our full stock.</p>
 						</div>
 					</div>
 				</div>
@@ -299,7 +299,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -317,7 +317,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								/div-->
 							</div>
 						</div>
 					</div>
@@ -332,7 +332,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -350,7 +350,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -365,7 +365,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
 										<p class="hover-text">add to bag</p>
@@ -382,7 +382,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -397,7 +397,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -415,7 +415,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -430,7 +430,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -448,7 +448,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -463,7 +463,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -481,7 +481,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -496,7 +496,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -514,7 +514,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -529,7 +529,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -547,7 +547,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -579,7 +579,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -597,7 +597,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -612,7 +612,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -630,7 +630,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -645,7 +645,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -663,7 +663,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -678,7 +678,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -696,7 +696,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -711,7 +711,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -729,7 +729,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -744,7 +744,7 @@
 									<h6>$150.00</h6>
 									<h6 class="l-through">$210.00</h6>
 								</div>
-								<div class="prd-bottom">
+								<!--<div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -762,7 +762,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
