--- a/checkout.html
+++ b/checkout.html
@@ -49,7 +49,7 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Inventory</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Shop Inventory</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">Link-Up</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">Fresh Styles</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">About Us</a></li>
