--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="category.html">Inventory</a></li>
+							<li class="nav-item"><a class="nav-link" href="category.html">Shop Inventory</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">Link-Up</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">Fresh Styles</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
