title headers over products
header above products

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
 	<!-- Start category Area -->
 	<section class="category-area section_gap">
 		<div class="container">
+				<div class="row justify-content-center">
+						<div class="col-lg-6 text-center">
+							<div class="section-title">
+								<h1>Fresh Styles Sneak Peak</h1>
+								<p>Below is a sneak peak of the freshest styles with shoes bought right 
+									here at CurrencyCops. Visit the "Fresh Styles" Page in order to see our 
+									full display of styles.</p>
+							</div>
+						</div>
+					</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-8 col-md-12">
 					<div class="row">
