final mid point changes
final push before mid-point presentation

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 								<h6>addidas New Hammer sole
 									for Sports person</h6>
 								<div class="price">
-									<h6>TBD</h6>
+									<h6> Price TBD</h6>
 								</div>
 								
 							</div>
@@ -385,7 +385,7 @@
 								<h6>addidas New Hammer sole
 									for Sports person</h6>
 								<div class="price">
-									<h6>TBD</h6>
+									<h6>Price TBD</h6>
 								</div>
 								
 							</div>
