--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Karma Shop</title>
+    <title>CurrencyCops Checkout</title>
 
     <!--
             CSS
@@ -120,13 +120,13 @@
                     </div>
                 </form>
             </div>
-            <div class="cupon_area">
+           <!-- <div class="cupon_area">
                 <div class="check_title">
                     <h2>Have a coupon? <a href="#">Click here to enter your code</a></h2>
                 </div>
                 <input type="text" placeholder="Enter coupon code">
                 <a class="tp_btn" href="#">Apply Coupon</a>
-            </div>
+            </div> -->
             <div class="billing_details">
                 <div class="row">
                     <div class="col-lg-8">
@@ -209,7 +209,7 @@
                             <ul class="list list_2">
                                 <li><a href="#">Subtotal <span>$0.00</span></a></li>
                                 <li><a href="#">Shipping <span>Flat rate: $1.00</span></a></li>
-                                <li><a href="#">Total <span>$2210.00</span></a></li>
+                                <li><a href="#">Total <span>$0.00</span></a></li>
                             </ul>
                            
                             </div>
@@ -245,8 +245,8 @@
                         <div class="single-footer-widget">
                             <h6>About Us</h6>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-                                magna aliqua.
+                                    CurencyCops is here to provide a new perspective to the sneaker resell business
+                                    Feel free to check out our "About us" page to read our full story.
                             </p>
                         </div>
                     </div>
