final final midpoint presentation
last last second modification

--- a/checkout.html
+++ b/checkout.html
@@ -16,6 +16,8 @@
     <meta charset="UTF-8">
     <!-- Site Title -->
     <title>CurrencyCops Checkout</title>
+    <link href = "img/product/llogo.png" rel = "icon" type = "image/x-icon">
+
 
     <!--
             CSS
