--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 							<li class="nav-item"><a class="nav-link" href="index.html">Link-Up</a></li>
 							<li class="nav-item"><a class="nav-link" href="index.html">Fresh Styles</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+							<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 								<li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
