--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 						<div class="section-title">
 							<h1>Incoming Cops</h1>
 							<p>Below is a sneak peak of our incoming shoes. The displayed shoes will be added to our "Shop Inventory"
-								 Page within the coming weeks. CurrencyCops has chosen to dive into the dress shoe market. Hope you brought 
-								your swim gear!</p>
+								 Page within the coming weeks. CurrencyCops has chosen to dive into the dress shoe market. Hope you can 
+								  swim!</p>
 						</div>
 					</div>
 				</div>
