--- a/login.html
+++ b/login.html
@@ -106,7 +106,7 @@
 							<p>Create a Currency CurrencyCops's account in order to shop 
 								schedule a "Link-Up" appointment with another CC (CurrencyCops) member!
 							</p>
-							<a class="primary-btn" href="registration.html">Create an Account</a>
+							<a class="primary-btn" href="register.php">Create an Account</a>
 						</div>
 					</div>
 				</div>
